[gd_scene load_steps=7 format=2]

[ext_resource path="res://ui/dialogue/DialogueManager.gd" type="Script" id=1]
[ext_resource path="res://styles/dialogue.tres" type="Theme" id=2]
[ext_resource path="res://ui/dialogue/Choice.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/common/Cursor.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/dialogue/VoiceGeneratorAudioStreamPlayer.tscn" type="PackedScene" id=7]

[sub_resource type="AudioStreamRandomPitch" id=1]

[node name="Dialogue" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Box" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 262.0
margin_top = 450.0
margin_right = -262.0
margin_bottom = -25.0
rect_min_size = Vector2( 500, 135 )
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Box"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Box"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container1" type="VBoxContainer" parent="Box/HBoxContainer"]
margin_right = 480.0
margin_bottom = 135.0
size_flags_horizontal = 3
custom_constants/separation = 5
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container2" type="Control" parent="Box/HBoxContainer/Container1"]
margin_right = 480.0
margin_bottom = 135.0
rect_min_size = Vector2( 0, 135 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="RichTextLabel" parent="Box/HBoxContainer/Container1/Container2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 19.0
margin_right = -26.0
margin_bottom = -7.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Box"]
margin_left = 5.0
margin_top = -11.0
margin_right = 81.0
margin_bottom = 13.0
size_flags_horizontal = 15
size_flags_vertical = 15
text = "Name 1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choices" type="VBoxContainer" parent="Box"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -29.5908
margin_top = -86.8265
margin_right = 70.4092
margin_bottom = -16.8265
rect_min_size = Vector2( 100, 45 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Choice0" parent="Box/Choices" instance=ExtResource( 3 )]
focus_mode = 2

[node name="Choice1" parent="Box/Choices" instance=ExtResource( 3 )]
margin_top = 25.0
margin_bottom = 49.0

[node name="Choice2" parent="Box/Choices" instance=ExtResource( 3 )]
margin_top = 50.0
margin_bottom = 74.0

[node name="Cursor" parent="Box" instance=ExtResource( 4 )]
base_ui_node_path = NodePath("../..")

[node name="VoiceGeneratorAudioStreamPlayer" parent="." instance=ExtResource( 7 )]
stream = SubResource( 1 )
